# egl

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
bbo/: cma.py  convergence.py  datsets.py  distribution.py  egl.py  exception.py  function.py  handlers.py  igl.py  losses.py  stop_condition.py  trainer.py  utils.py  value_normalizer.py
egl/: __init__.py  alg_optimizer.py  cma.py  convergence.py  distribution.py  egl.py  function.py  handlers.py  igl.py  losses.py  trainer.py  trust_region.py  utils.py
tests/: test_egl_coco_integration.py
